@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.9.3-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-09-03 14:55:16, took 00:14:51, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2025-09-03 15:24:30, took 00:12:23, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
