@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.9.3-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-09-03 14:55:16, took 00:14:51, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2025-09-03 15:24:30, took 00:12:23, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
