@@ -17513,3 +17513,6 @@ qc pass: wireguard over ipv6
 ---------------------------------- 2025-09-03 14:19:10 25.9.3
 no qc pass: wireguard over wireguard
 failed: wireguard over wireguard
+---------------------------------- 2025-09-03 14:57:26 25.9.3
+no failed: wireguard over wireguard
+qc pass: wireguard over wireguard
